2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(check_usercfg):
	Don't send the usercfg-changed signal if the configuration hasn't
	changed.
	(controller_run_app):
	Make sure that rsp_init() is called before loading the user
	config.

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	* src/metadata.[ch]
	* src/util.[ch]
	* src/vgl-tray-icon.c:
	Move lastfm_get_track_cover_image() from metadata.c to util.c

2009-04-05  Alberto Garcia  <agarcia@igalia.com>

	* src/Makefile.am
	* src/metadata.h
	* src/metadata.c
	* src/controller.c (get_user_extradata):
	Use lastfm_ws_get_friends() and lastfm_ws_get_user_tags() from the
	new API and disable the old functions.

2009-04-05  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.c (lastfm_ws_http_request):
	Return a boolean with the response status code.

2009-04-05  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.h
	* src/lastfm-ws.c:
	Initial implementation of the Last.fm Web Services API v2.0

2009-04-05  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.h
	* src/controller.c
	* src/metadata.[ch]
	* src/uimisc.[ch]
	* src/xmlrpc.[ch]:
	Rename request_type to LastfmTrackComponent

2009-04-05  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (finish_playing_track):
	Love/ban rating was being reset before scrobbling a track. Fixed.

2009-04-05  Alberto Garcia  <agarcia@igalia.com>

	* src/http.h
	* src/http.c (http_post_buffer)
	* src/scrobbler.c (rsp_set_nowplaying, rsp_scrobble)
	* src/xmlrpc.c (xmlrpc_send_request):
	Add optional 'retbufsize' param to http_post_buffer()

2009-04-04  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c
	* src/protocol.c
	* src/scrobbler.c
	* src/uimisc.c
	* src/vgl-main-window.c
	* src/xmlrpc.c:
	Use arrays instead of pointers for static strings.

2009-04-04  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c (lastfm_parse_track):
	Check for empty free track URLs

2009-04-04  Alberto Garcia  <agarcia@igalia.com>
